// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/tekton/index pipeline getReleases processes real data 1`] = `
Object {
  "homepage": "https://hub.tekton.dev",
  "registryUrl": "https://api.hub.tekton.dev/",
  "releases": Array [
    Object {
      "downloadUrl": "https://raw.githubusercontent.com/tektoncd/catalog/main/pipeline/buildpacks/0.2/buildpacks.yaml",
      "registryUrl": "https://api.hub.tekton.dev/",
      "releaseTimestamp": "2022-07-07T08:25:07.000Z",
      "version": "0.2",
    },
  ],
  "sourceUrl": "https://github.com/tektoncd/hub",
}
`;

exports[`modules/datasource/tekton/index task getReleases processes real data 1`] = `
Object {
  "homepage": "https://hub.tekton.dev",
  "registryUrl": "https://api.hub.tekton.dev/",
  "releases": Array [
    Object {
      "downloadUrl": "https://raw.githubusercontent.com/tektoncd/catalog/main/task/buildpacks-phases/0.2/buildpacks-phases.yaml",
      "registryUrl": "https://api.hub.tekton.dev/",
      "releaseTimestamp": "2021-10-29T16:08:38.000Z",
      "version": "0.2",
    },
    Object {
      "downloadUrl": "https://raw.githubusercontent.com/tektoncd/catalog/main/task/buildpacks/0.5/buildpacks.yaml",
      "registryUrl": "https://api.hub.tekton.dev/",
      "releaseTimestamp": "2022-07-12T10:45:21.000Z",
      "version": "0.5",
    },
  ],
  "sourceUrl": "https://github.com/tektoncd/hub",
}
`;
